Fix z-index.

--- a/wwwroot/scss/dialog.scss
+++ b/wwwroot/scss/dialog.scss
@@ -5,7 +5,7 @@
     width: $width-full;
     height: $height-full;
     outline: $outline-0;
-    z-index: 1;
+    z-index: 100;
     display: $display-none;
     position: $position-fixed;
     left: 0;
